# water-cut-notify

./: .enc.env  .env.sample  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  docker-compose.yml  get_no_water_running.go  go.mod  go.sum  main.go  main.py  notification.go  pyproject.toml  requirements.txt  water-cut-notify.sh
.github/: dependabot.yaml
.github/workflows/: build.yaml  build.yml  go-test.yaml  run.yml  run.yml.bak
python/: main.py
