[tool.poetry]
name = "water-cut-notify"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
